--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,5 +6,6 @@
       archivePrefix={arXiv},
       primaryClass={cond-mat.str-el},
       url={https://arxiv.org/abs/2504.13258},
-      html={https://arxiv.org/abs/2504.13258} 
+      html={https://arxiv.org/abs/2504.13258},
+      preview={fig_02_schematic.pdf}
 }
