--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,3 +9,14 @@
       html={https://arxiv.org/abs/2504.13258},
       preview={fig_02_schematic.pdf}
 }
+
+@misc{perugu2025krylovwindingemergentcoherence,
+      title={Krylov Winding and Emergent Coherence in Operator Growth Dynamics}, 
+      author={Rishik Perugu and Bryce Kobrin and Michael O. Flynn and Thomas Scaffidi},
+      year={2025},
+      eprint={2509.25331},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2509.25331}, 
+      preview={Fig1Schematic.pdf}
+}
