--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,3 @@
-@misc{perugu2025universalnonequilibriumdynamicspure,
-      title={Universal non-equilibrium dynamics of pure states and density-dependent thermalization in Sachdev-Ye-Kitaev model}, 
-      author={Rishik Perugu and Arijit Haldar and Sumilan Banerjee},
-      year={2025},
-      eprint={2504.13258},
-      archivePrefix={arXiv},
-      primaryClass={cond-mat.str-el},
-      url={https://arxiv.org/abs/2504.13258},
-      html={https://arxiv.org/abs/2504.13258},
-      preview={fig_02_schematic.pdf}
-}
-
 @misc{perugu2025krylovwindingemergentcoherence,
       title={Krylov Winding and Emergent Coherence in Operator Growth Dynamics}, 
       author={Rishik Perugu and Bryce Kobrin and Michael O. Flynn and Thomas Scaffidi},
@@ -18,5 +6,18 @@
       archivePrefix={arXiv},
       primaryClass={quant-ph},
       url={https://arxiv.org/abs/2509.25331}, 
+      arxiv={2509.25331},
       preview={Fig1Schematic.pdf}
+}
+
+@misc{perugu2025universalnonequilibriumdynamicspure,
+      title={Universal non-equilibrium dynamics of pure states and density-dependent thermalization in Sachdev-Ye-Kitaev model}, 
+      author={Rishik Perugu and Arijit Haldar and Sumilan Banerjee},
+      year={2025},
+      eprint={2504.13258},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.str-el},
+      url={https://arxiv.org/abs/2504.13258},
+      arxiv={2504.13258},
+      preview={fig_02_schematic.pdf}
 }
