--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,13 +11,17 @@
 }
 
 @misc{perugu2025universalnonequilibriumdynamicspure,
+      abbr={PhysRevB},
       title={Universal non-equilibrium dynamics of pure states and density-dependent thermalization in Sachdev-Ye-Kitaev model}, 
       author={Rishik Perugu and Arijit Haldar and Sumilan Banerjee},
       year={2025},
       eprint={2504.13258},
       archivePrefix={arXiv},
       primaryClass={cond-mat.str-el},
-      url={https://arxiv.org/abs/2504.13258},
+      journal={Phys. Rev. B},
+      doi={10.1103/9cbp-7tvv},
+      html={ https://doi.org/10.1103/9cbp-7tvv},
+      url={https://arxiv.org/abs/2504.13258},    
       arxiv={2504.13258},
       preview={fig_02_schematic.pdf}
 }
